Add rock, paper, and scissors buttons to webpage

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <script src="script.js"></script>
-    
+    <button id="btn">Rock</button>
+    <button id="btn">Paper</button>
+    <button id="btn">Scissors</button>
 </body>
 </html>
