Add reset button and created container for choices

--- a/index.html
+++ b/index.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
+    <div class = choice_container>
+        <button class = "choice" id="rock">Rock</button>
+        <button class = "choice" id="paper">Paper</button>
+        <button class = "choice" id="scissors">Scissors</button>
+    </div>
+    <div class = "results" id="results"></div>
+    <div class = "reset">
+        <button id ="reset_btn">Reset</button>
+    </div>
     <script src="script.js"></script>
-    <button id="btn">Rock</button>
-    <button id="btn">Paper</button>
-    <button id="btn">Scissors</button>
 </body>
 </html>
